<resources>
    <string name="app_name">RemoteLearnig</string>
    <string name="loginGo">Login</string>
    <string name="singupGo">Sing Up</string>
    <string name="AHA">Already Have Account? </string>
    <string name="login">Login !</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">SignUp</string>
    <string name="submit">Submit</string>
</resources>