<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:src="@drawable/back"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="328dp"
        android:layout_marginLeft="35dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:id="@+id/Ename"
        android:textColor="@color/white"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="Enter your name"
        android:paddingLeft="15dp"
        android:textColorHint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="408dp"
        android:layout_marginLeft="35dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>


    <EditText
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:id="@+id/Eemail"
        android:layout_below="@+id/Ename"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="Enter your email"
        android:paddingLeft="15dp"
        android:textColorHint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="488dp"
        android:layout_marginLeft="35dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:id="@+id/Epassword"
        android:layout_below="@+id/Eemail"
        android:textColor="@color/white"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="Enter your password"
        android:paddingLeft="15dp"
        android:textColorHint="@color/white"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:id="@+id/SignUp"
        android:layout_below="@+id/Epassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/singupGo"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/rounded_button_bg"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AHA"
        android:textAllCaps="false"
        android:layout_below="@id/SignUp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:textColor="#E91E63"
        android:layout_marginStart="65dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginGo"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_below="@id/SignUp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="#E91E63"
        android:layout_marginStart="65dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>